tests/fixtures/errors/E0912_qq_rhs_type_mismatch.mimz
// expect: E0912
module M {
  in c: bit
  in d: bits[8]
  out o: bits[4]
  wire x: bits[8]? = { valid: c, data: d }
  o = x ?? 0
}
